# AgentOS-TS

./: .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  README.md  biome.json  package.json  pytest.ini  tsconfig.json  vitest.config.ts  vitest.e2b.config.ts
.claude/: settings.local.json
aos-cli/: .gitignore  README.md  pyproject.toml
aos-cli/docs/: AOS_CLI_MIGRATION.md  MODEL_PROTOCOL.md
aos-cli/docs/plans/: 2026-04-24-minimal-capability-gateway-implementation.md  2026-04-24-minimal-capability-gateway.md  2026-04-26-cli-protocol-simplification.md
aos-cli/examples/: aos_cli_storyboard_request.json  asset-image.request.json  audio-transcribe.request.json  batch.manifest.json  call_from_skill.sh  embed.request.json  image.request.json  json.request.json  storyboard.batch.manifest.json  text.request.json  video.submit.request.json  vision.request.json
aos-cli/scripts/: manual-model-tests.sh
aos-cli/src/aos_cli/: cli.py  env.py
aos-cli/src/aos_cli/model/: artifacts.py  batch.py  capabilities.py  config.py  errors.py  http.py  media.py  preflight.py  protocol.py  registry.py  service.py
aos-cli/tests/: test_ark_video_provider.py  test_artifacts.py  test_batch.py  test_capabilities.py  test_cli_smoke.py  test_cli_stdio.py  test_download_artifact.py  test_env.py  test_gemini_provider.py  test_http.py  test_manual_model_tests_script.py  test_model_errors.py  test_model_protocol.py  test_model_run_cli.py  test_model_service.py  test_model_submit_poll_cli.py  test_openai_image_provider.py  test_preflight.py
e2b/python-runtime/: pyproject.toml
(+911 files in other folders)
