[project]
name = "aos-cli"
version = "0.1.0"
description = "AgentOS infrastructure CLI"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
aos-cli = "aos_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
