[project]
name = "agentos-e2b-python-runtime"
version = "0.1.0"
description = "Python runtime dependencies for AgentOS E2B sandbox"
requires-python = ">=3.12,<3.13"
dependencies = [
  "cos-python-sdk-v5>=1.9.38",
  "google-genai>=1.36.0",
  "pydantic>=2.11.7",
  "requests>=2.32.5",
]

[tool.uv]
package = false
